# examina_backend

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: config.py  constants.py  enums.py  logger.py  main.py  schemas.py
app/api/: __init__.py  api.py
app/api/v1/: api.py  dependencies.py  routers.py
app/api/v1/endpoints/: __init__.py  exams.py  papers.py  questions.py
app/config/: .env.example
app/core/db/: session.py
app/core/models/: __init__.py  base.py  exams.py  questions.py
app/core/schemas/: base.py  exams.py  questions.py
app/core/services/: base.py  constants.py  exams.py  questions.py  utils.py
app/utils/exceptions/: common_exceptions.py
docs/: API_Documentation.md  System Manual.md  data.json  data_contact.md  database_design.md
