[tool.poetry]
name = "examina_backend"
version = "0.1.0"
description = ""
authors = ["Sneh Pushp <pushp1999satyam@gmail.com>"]
readme = "README.md"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.1"
fastapi-pagination = "^0.12.3"
uvicorn = "^0.22.0"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.13"}
psycopg2-binary = "^2.9.6"
asyncpg = "^0.27.0"
greenlet = "^2.0.2"
python-multipart = "^0.0.6"
requests = "2.28.2"
pydantic = {version = "<2.1.1", extras = ["email"]}
loguru = "^0.7.2"
orjson = "^3.9.15"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.1"
httpx = "^0.23.3"
pytest-dotenv = "^0.5.2"
pytest-cov = "4.0.0"
pytest-asyncio = "^0.20.3"
pytest-xdist = "^3.1.0"
requests-mock = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
